Templates for some pages and some small changes

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -34,11 +34,11 @@
         <label>E-mail:<input type="email" placeholder="Podaj e-mail"></label><br>
         <label>Telefon:<input type="tel" maxlength="9" placeholder="Podaj numer"></label><br>
         <label>Temat wiadomości:<br>
-            <label class="radiolabel">Zgłoszenie problemu<input class="radio" type="radio" name="topic" value="Zgłoszenie problemu"></label><br>
-            <label class="radiolabel">Opinia o aplikacji<input class="radio" type="radio" name="topic" value="Opinia o aplikacji"></label><br>
+            <label class="radiolabel">Zgłoś problem<input class="radio" type="radio" name="topic" value="Zgłoś problem"></label><br>
+            <label class="radiolabel">Opinia o aplikacji<input class="radio" type="radio" name="topic"  value="Opinia o aplikacji" checked></label><br>
             <label class="radiolabel">Inny<input class="radio" type="radio" name="topic" value="Inny"></label><br>
         </label>
-        <label>Wiadomość:<textarea cols="100" rows="10" maxlength="800" placeholder="Wpisz swoją wiadomość"></textarea></label>
+        <label>Wiadomość:<textarea cols="100" rows="10" maxlength="960" placeholder="Wpisz swoją wiadomość"></textarea></label>
         <button id="submitMessage" type="submit">Wyślij!</button>
     </form>
 <br><br><br><br>
