--- a/aktualnosci/index.html
+++ b/aktualnosci/index.html
@@ -2,14 +2,14 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <title>Tourist Helper - Pomocnik Turysty | O nas </title>
+    <title>Tourist Helper - Pomocnik Turysty | Aktualności </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <meta name="description" content="Tourist helper - aplikacja ułatwiająca podróżowanie">
     <script type="text/javascript" src="../tourist.js"></script>
-    <!--<script type="text/javascript src=script.js"></script>-->
+    <script type="text/javascript src=script.js"></script>
     <link rel="icon" href="../img/zaplanuj.jpg" type="image/x-icon"> <!-- miniaturka na pasku-->
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <!--<link rel="stylesheet" type="text/css" href="style_2.css">-->
+    <link rel="stylesheet" type="text/css" href="style_2.css">
 
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 </head>
 <body>
 <header>
-    <div id="title"><a href="../index.html">Tourist Helper</a></div>
+    <div id="title"><a href="../">Tourist Helper</a></div>
     <div id="topMenu">
         <button id="logButton">Zaloguj</button>
     </div>
@@ -28,6 +28,13 @@
 
     TEMPLATE
 
+    <!--
+    TODO
+    Tu będą wstawiane newsy pobierane z bazy danych - najnowsze ciekawostki, wydarzenia itp.
+    * Określ max liczbę artykułów na stronie
+    * Przewijanie do kolejnych stron
+    * Fragment artykułu pokazywany bez kliknięcia
+    -->
     <br><br><br>
 </main>
 
