--- a/o-nas/index.html
+++ b/o-nas/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <meta name="description" content="Tourist helper - aplikacja ułatwiająca podróżowanie">
     <script type="text/javascript" src="../tourist.js"></script>
-    <!--<script type="text/javascript src=script.js"></script>-->
+    <script type="text/javascript src=script.js"></script>
     <link rel="icon" href="../img/zaplanuj.jpg" type="image/x-icon"> <!-- miniaturka na pasku-->
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <!--<link rel="stylesheet" type="text/css" href="style_2.css">-->
 
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
@@ -17,7 +16,7 @@
 </head>
 <body>
 <header>
-    <div id="title"><a href="../index.html">Tourist Helper</a></div>
+    <div id="title"><a href="../">Tourist Helper</a></div>
     <div id="topMenu">
         <button id="logButton">Zaloguj</button>
     </div>
