Add articles list, view to read article, list of articles created by one author, and list of articles from one category. Little changes in some files.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
@@ -50,10 +49,13 @@
             <div class="imgtext">Kontakt</div>
         </div>
 
+        <div id="imgcontainer6" class="imgcontainer">
+            <img id="imgmenu6" class="imgmenu" src="img/faq.jpg" alt="FAQ">
+            <div class="imgtext">FAQ</div>
+        </div>
+
         <br><br><br>
     </main>
-
-
 
     <footer>
         &copy; 2019 by <a id="github" target="_blank" href="http://github.com/Trevorek97">Damian Kita</a>
