--- a/faq/index.html
+++ b/faq/index.html
@@ -2,7 +2,7 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <title>Tourist Helper - Pomocnik Turysty | Aktualności </title>
+    <title>Tourist Helper - Pomocnik Turysty | FAQ </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <meta name="description" content="Tourist helper - aplikacja ułatwiająca podróżowanie">
     <script type="text/javascript" src="../tourist.js"></script>
